fix: z-index

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -77,6 +77,7 @@ $background-color: #2b2b2b;
   &__button-element {
     $element-height: 4px;
     position: relative;
+    z-index: 1000;
 
     &,
     &::before,
